--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://pages.git.generalassemb.ly/gknief/Project-1-Game-of-Flames/">Projects</a></li>
-                <li><a href="#">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="#" class="active">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <h1 class="about">ABOUT ME</h1>
-    <p>I am a 22 year-old full-stack developer from New York. I found a passion for coding when I was a student at the University of Delaware, where I recently graduated. I am also very passionate about basketball. I grew up playing on basketball and baseball teams and continued to play throughout high school on the varisty level. I believe that throughout these years of being an athlete I have developed valuable teamwork skills that will transition to wherever I end up working.</p>
+    <p class="about-info">I am a 22 year-old full-stack developer from New York. I found a passion for coding when I was a student at the University of Delaware, where I recently graduated. I am also very passionate about basketball. I grew up playing on basketball and baseball teams and continued to play throughout high school on the varsity level. I have also developed leadership skills through serving as the president of my pledge class of the Alpha Epsilon Pi fraternity. I believe that throughout these years of being an athlete I have developed valuable teamwork skills that will transition to wherever I end up working. Given my love for sports, I would love to work in the sports industry but I am very open-minded and adaptable to any given circumstance.</p>
 </body>
 
 </html>
