--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,20 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://pages.git.generalassemb.ly/gknief/Project-1-Game-of-Flames/">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#" class="active">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <h1 class="contact">CONTACT ME</h1>
-    <p class="contactInfo">914-391-5569</p>
-    <p>gknief@mac.com</p>
+    <div class="contact-container">
+    <img src="./images/gk.jpeg" id="grant" />
+    <p class="contact-info">914-391-5569<br><br>
+    gknief@mac.com<br><br>
+    Message me on <a href="https://www.linkedin.com/in/grantknief/">LinkedIn</a><br><br>
+    Take a look at my <a href="grant.resume.0829.pdf">resume</a>!</p>
+    </div>
 </body>
 
 </html>
