--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Comfortaa|Notable|Syncopate" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Grant Knief | Portfolio</title>
 </head>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <h1>GRANT KNIEF</h1>
+    <h1 class="grant">GRANT KNIEF</h1>
         <a href="https://github.com/gknief"><img src="http://github.com/windows-tile.png" class="github" /></a>
         <a href="https://www.linkedin.com/in/grantknief/"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_black-512.png" class="linkedin" /></a>
 </body>
