made pages responsive

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <h1 class="grant">GRANT KNIEF</h1>
+    <h1 class="name">GRANT KNIEF</h1>
+    <div class="social-media-icons">
         <a href="https://github.com/gknief"><img src="http://github.com/windows-tile.png" class="github" /></a>
-        <a href="https://www.linkedin.com/in/grantknief/"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_black-512.png" class="linkedin" /></a>
+        <a href="https://www.linkedin.com/in/grantknief/"><img src="https://image.flaticon.com/icons/svg/56/56591.svg" class="linkedin" /></a>
+    </div>
 </body>
 
 </html>
