--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Comfortaa|Notable|Syncopate" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Grant Knief | Projects</title>
 </head>
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#" class="active">Projects</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
