changed picture on my contact page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </header>
     <h1 class="contact">CONTACT ME</h1>
     <div class="contact-container">
-    <img src="./images/gk.jpeg" id="grant" />
+    <img src="./images/image1.jpeg" id="grant" />
     <p class="contact-info">914-391-5569<br><br>
     gknief@mac.com<br><br>
     Message me on <a href="https://www.linkedin.com/in/grantknief/">LinkedIn</a><br><br>
